@@ -242,6 +242,12 @@ jobs:
         uses: Swatinem/rust-cache@v2.7.3
       - name: Build examples for the C API
         run: just build-capi-examples
+      - name: Check code formatted
+        run: |
+          just clang-format
+          git diff --exit-code
+      - name: Check no lint warnings
+        run: just clang-tidy
 
   wasm-examples:
     name: Examples for the Wasm bindings
