@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/abcrypt-capi-v0.3.2\...HEAD[Unreleased]
+
+=== Changed
+
+* Re-enable `clang-format` and `clang-tidy` on CI ({pull-request-url}/384[#384])
+
 == {compare-url}/abcrypt-capi-v0.3.1\...abcrypt-capi-v0.3.2[0.3.2] - 2024-04-16
 
 === Fixed
